<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".support.SupportActivity"
    android:background="@color/colorPrimary">



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="30dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/customer_care_call_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/customerCareCall"
                android:textStyle="bold"
                android:textColor="@color/liteblack"
                android:padding="8dp"/>

            <TextView
                android:id="@+id/customer_care_call_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setSupport"
                android:layout_marginTop="30dp"
                android:layout_alignParentEnd="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/ClickHere"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:padding="8dp"/>


            <TextView
                android:id="@+id/customer_care_message_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customer_care_call_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/customerCareMessage"
                android:textStyle="bold"
                android:textColor="@color/liteblack"
                android:padding="8dp"/>
            <TextView
                android:id="@+id/customer_care_message_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customer_care_call_link"
                android:layout_alignParentEnd="true"
                android:onClick="setSupport"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/ClickHere"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:padding="8dp"/>

            <TextView
                android:id="@+id/customer_care_email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customer_care_message_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/customerCareEmail"
                android:textStyle="bold"
                android:textColor="@color/liteblack"
                android:padding="8dp"/>

            <TextView
                android:id="@+id/customer_care_email_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customer_care_message_link"
                android:layout_alignParentEnd="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/ClickHere"
                android:onClick="setSupport"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:padding="8dp"/>

            <TextView
                android:id="@+id/customer_care_tutorial_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customer_care_email_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/CustomerCareTutorial"
                android:textStyle="bold"
                android:textColor="@color/liteblack"
                android:padding="8dp"/>
            <TextView
                android:id="@+id/customer_care_tutorial_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/customer_care_email_link"
                android:layout_alignParentEnd="true"
                android:onClick="setSupport"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/ClickHere"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:padding="8dp"/>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:onClick="setSupport"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="https://www.a2zbill.com"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:padding="8dp"/>



</RelativeLayout>