<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_non"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="2dp"
        android:backgroundTint="@color/blue">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:layout_width="match_parent"
                android:background="@color/blue"
                android:gravity="center"
                android:layout_height="45dp">
                <TableRow
                    android:minHeight="45dp"
                    android:layout_width="match_parent">

                    <TextView android:id="@+id/TextView_stock"
                        android:layout_width="180dp"
                        android:layout_height="match_parent"
                        android:text="@string/stock"
                        android:layout_weight="1"
                        android:background="#ffff"
                        android:padding="10dp"
                        android:gravity="center_vertical"
                        android:layout_marginBottom="1dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginHorizontal="1dp"
                        android:textColor="@color/liteblack"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Textview_for_price"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/price"
                        android:textColor="@color/liteblack"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:background="#ffff"
                        android:layout_marginTop="1dp"
                        android:textStyle="bold"
                        android:minWidth="80dp"
                        android:layout_marginRight="1dp"
                        android:layout_marginBottom="1dp"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView_counter_qnty"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/qnty"
                        android:minWidth="80dp"
                        android:layout_marginTop="1dp"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:background="#ffff"
                        android:layout_marginRight="1dp"
                        android:textColor="@color/liteblack"
                        android:textSize="18sp"
                        android:layout_marginBottom="1dp"
                        android:textStyle="bold" />

                    <TextView android:id="@+id/TextView_values"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/value"
                        android:layout_marginTop="1dp"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:background="#ffff"
                        android:minWidth="80dp"
                        android:layout_marginRight="1dp"
                        android:layout_marginBottom="1dp"
                        android:textColor="@color/liteblack"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_for_salesDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="2dp"
        android:layout_below="@+id/cardView_non"/>



</RelativeLayout>