<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="stock"
            type="com.example.a2zbilling.db.entities.Stock" />
        <variable
            name="additemclickHandler"
            type="com.example.a2zbilling.stock.addUpdate.AddUpdateStockActivity.AddItemClickHandler" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        tools:context=".stock.addUpdate.AddUpdateStockActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/cardN"
            android:layout_alignParentTop="true">
            <ImageView
                android:id="@+id/imageview_for_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:onClick="@{additemclickHandler::setImage}"
                android:src="@drawable/beg" />
            <TextView
                android:id="@+id/textview_for_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffff"
                android:text="Item No."
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.945"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.899" />


            <TextView
                android:id="@+id/textview_for_scanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#ffff"
                android:text="Scanner No."
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.065"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.898" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardN"
            android:layout_width="match_parent"
            android:layout_above="@+id/Linner1"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/liner8"
                android:layout_above="@+id/liner3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_itemname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="18"
                    android:backgroundTint="@color/colorPrimary"
                    app:errorEnabled="true">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:hint="@string/itemName"
                        android:inputType="text"
                        android:text="@={stock.itemName}" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/scanner"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:onClick="@{additemclickHandler::onBarCodeClick}"
                    android:backgroundTint="@color/colorPrimary"
                    android:layout_height="wrap_content">
                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/scan"/>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

                    <LinearLayout
                        android:id="@+id/liner4"
                        android:layout_above="@+id/liner3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_itemQuantity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="18"
                            android:backgroundTint="@color/colorPrimary"
                            app:errorEnabled="true">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editQuentity"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="18"
                                android:backgroundTint="@color/colorPrimary"
                                android:hint="@string/itemQuntity"
                                android:inputType="numberDecimal"
                                android:text="@={stock.itemQuentity}" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <Button
                            android:id="@+id/unit_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:textColor="#FFFF"
                            android:background="@color/blue"
                            android:text="@{stock.itemUnit}"
                            android:onClick="@{additemclickHandler::selectUnit}" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/liner3"
                        android:layout_width="match_parent"
                        android:layout_above="@+id/Liner2"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:orientation="horizontal">
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_itempurchaseperunit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/colorPrimary"
                            app:errorEnabled="true">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editPurchasePrice"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:backgroundTint="@color/colorPrimary"
                                android:hint="@string/purchaseUnit"
                                android:inputType="number"
                                android:text="@={stock.itemPurchasePerUnit}" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_itempurchasetotal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/colorPrimary"
                            app:errorEnabled="true">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editPurchaseTotal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:backgroundTint="@color/colorPrimary"
                                android:hint="@string/puchaseTotal"
                                android:inputType="number"
                                android:text="@={stock.itemPuchaseTotal}" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/Liner2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/Linner1"
                        android:orientation="horizontal">
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_itemsaleunit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/colorPrimary"
                            app:errorEnabled="true">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editSalePrice"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:backgroundTint="@color/colorPrimary"
                                android:hint="@string/saleUnit"
                                android:inputType="number"
                                android:text="@={stock.itemSalePerUnit}" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/text_input_itemsaletotal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:backgroundTint="@color/colorPrimary"
                            app:errorEnabled="true">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editSaleTotal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:backgroundTint="@color/colorPrimary"
                                android:hint="@string/saleTotal"
                                android:inputType="number"
                                android:text="@={stock.itemSaleTotal}" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:id="@+id/Linner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@color/blue"
                android:onClick="@{additemclickHandler::onCancelClick}"
                android:text="@string/cancel"
                android:textColor="#ffff" />
            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@color/blue"
                android:onClick="@{additemclickHandler::onSaveClick}"
                android:text="@string/save"
                android:textColor="#ffff" />
        </LinearLayout>
    </RelativeLayout>

</layout>