<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="expenses"
            type="com.example.a2zbilling.db.entities.Expenses" />
        <variable
            name="clickListener"
            type="com.example.a2zbilling.ExpensesBottomSheetDialog.OnClickListener" />
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
            android:id="@+id/expenses_category_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/liteblack"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_centerVertical="true"
            android:text="select category"/>

            <Spinner
                android:id="@+id/payment_spinner3"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/expenses_category_text"
                android:layout_height="60dp" />

        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="38"
        android:backgroundTint="@color/liteblack"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/edit_expenses_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={expenses.expenseCategory}"
            android:backgroundTint="@color/liteblack"
            android:hint="Expense category"/>
    </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_i"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="38"
            android:backgroundTint="@color/liteblack"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/edit_expenses_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@={expenses.expenseTotal}"
                android:backgroundTint="@color/liteblack"
                android:hint="@string/total_price"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>



       <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
           android:layout_height="88dp"
           android:layout_marginStart="8dp"
           android:layout_marginLeft="8dp"
           android:layout_weight="1"
           android:layout_marginEnd="8dp"
           android:layout_marginTop="8dp">

           <Spinner
               android:id="@+id/payment_spinner"
               android:layout_width="match_parent"
               android:layout_marginTop="10dp"
               android:layout_height="60dp" />

       </androidx.cardview.widget.CardView>

   </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_it"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="38"
            android:backgroundTint="@color/liteblack"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/expenses_description"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@={expenses.description}"
                android:backgroundTint="@color/liteblack"
                android:hint="@string/description"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/save_expenses"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/edit_stock_Name"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:onClick="@{clickListener::insertExpenses}"
        android:layout_gravity="center"
        android:backgroundTint="@color/blue"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:src="@drawable/save" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="12sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>







</LinearLayout>
</layout>